<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">KTodo</string>
	<string name="all_untranslated">All</string>
	<!-- don't translate this! -->
	<string name="unfiled_untranslated">Unfiled</string>
	<!-- don't translate this! -->
	<string name="edit_tags">Edit tags</string>
	<string name="show_completed_items">Show checked</string>
	<string name="hide_completed_items">Hide checked</string>
	<string name="add">Add</string>
	<string name="rename">Rename</string>
	<string name="delete">Delete</string>
	<string name="edit">Edit</string>
	<string name="rename_tag_title">Rename tag</string>
	<string name="new_tag_name_text">New tag name</string>
	<string name="tag_already_exists">Such tag already exists</string>
	<string name="delete_tag_title">Delete tag</string>
	<string name="with_no_tags">With no tags</string>
	<string name="items_depend_on_tag">There are %d items with this tag. What to do with them?</string>
	<string name="move">Move</string>
	<string name="select_tag_title">Select tag</string>
	<string name="priority">Priority</string>
	<string name="select_prio_title">Select priority</string>
	<string name="change_prio">Priority</string>
	<string name="change_progress">Progress</string>
	<string name="select_progress_title">Select progress</string>
	<string name="change_tag">Tag</string>
	<string name="change_due_date">Due date</string>
	<string name="all">All</string>
	<string name="unfiled">Unfiled</string>
	<string name="export">Export</string>
	<string name="export_file_name">Export file name</string>
	<string name="exporting_data">Exporting data</string>
	<string name="_import">Import</string>
	<string name="import_file_name">Import file name</string>
	<string name="importing_data">Importing data</string>
	<string name="error">Error</string>
	<string name="wipe">Wipe existing data</string>
	<string name="progress">Progress</string>
	<!-- Complete? Finished? Done? -->
	<string name="default_due_date">Default due date</string>
	<string name="due_date">Due date</string>
	<string name="today">Today</string>
	<string name="tomorrow">Tomorrow</string>
	<string name="one_week_later">One week later</string>
	<string name="no_date">No date</string>
	<string name="choose_date">Choose date…</string>
	<string name="due_date_format_short">M/d</string>
	<string name="widget_2x2">KTodo 2x2</string>
	<string name="widget_2x1">KTodo 2x1</string>
	<string name="widget_2x4">KTodo 2x4</string>
	<string name="widget_4x2">KTodo 4x2</string>
	<string name="widget_4x4">KTodo 4x4</string>
	<string name="widget_loading">Loading widget…</string>
	<string name="widget_configure_title">Configure KTodo widget</string>
	<string name="widget_ok">OK</string>
	<string name="widget_filtering_options">Todo items filtering</string>
	<string name="widget_hide_completed">Hide completed</string>
	<string name="widget_show_only">Show only…</string>
	<string name="widget_show_only_due">Due items</string>
	<string name="widget_show_only_due_x">Due in</string>
	<string name="widget_days">days</string>
	<string name="widget_line1">recreate</string>
	<string name="widget_line2">me</string>
	<string name="help_summary">Help! Slide me to the left!</string>
	<string name="help_body">Short KTodo help\n\n
On the main screen:\n
* slide items to the left to edit (like you just did)\n
* fling them to the right to delete\n
* long tap for context menu\n
* drag "Add" button to the left to add an item and go to the edit screen\n
* items are always sorted by priority\n\n
On the edit screen:\n
* change tag using combo on top\n
* edit summary and details using text areas\n
* item will be marked by a blue ball on the main screen if you put something in the details\n
* edit priority, progress and due date using buttons below\n
* try to slide on priority and progress buttons</string>
	<string name="sorting">Sorting</string>
	<string name="prio_due_summary">Priority, Due date, Summary</string>
	<string name="due_prio_summary">Due date, Priority, Summary</string>
	<string name="prio_summary_due">Priority, Summary, Due date</string>
	<string name="summary_prio_due">Summary, Priority, Due date</string>
	<string name="due_summary_prio">Due date, Summary, Priority</string>
	<string name="summary_due_prio">Summary, Due date, Priority</string>
	<string name="prio_due_summary_t">prio, due, summ</string>
	<string name="due_prio_summary_t">due, prio, summ</string>
	<string name="prio_summary_due_t">prio, summ, due</string>
	<string name="summary_prio_due_t">summ, prio, due</string>
	<string name="due_summary_prio_t">due, summ, prio</string>
	<string name="summary_due_prio_t">summ, due, prio</string>
	<string name="undelete">Undelete</string>

	<string name="choose_color_dlg_title">Choose color</string>
	<string name="prefs_reset_to_defaults">Reset to defaults</string>
	<string name="prefs_title">Preferences</string>
	<string name="prefs_bg_color_confirm">bg_col_conf</string>
	<string name="prefs_default_color_confirm">default_col_conf</string>
	<string name="prefs_enable_fling_delete">Delete by fling</string>
	<string name="prefs_enable_fling_delete_s">Delete items by throwing them to the right</string>
	<string name="prefs_enable_slide_edit">Slide to edit</string>
	<string name="prefs_enable_slide_edit_s">Edit items by sliding them to the left</string>
	<string name="prefs_click_anywhere_to_check">Click anywhere to check</string>
	<string name="prefs_click_anywhere_to_check_s">Click anywhere or on the checkmark only to check/uncheck items</string>
	<string name="prefs_main_list_font_size">List font size</string>
	<string name="prefs_main_list_font_size_s">Todo list items font size</string>
	<string name="prefs_show_due_date_as_days_left">Due date as days left</string>
	<string name="prefs_show_due_date_as_days_left_s">Show due dates as days left</string>
	<string name="prefs_colors">Colors</string>
	<string name="prefs_prio_colors">Priority colors</string>
	<string name="prefs_due_date_colors">Due date colors</string>
	<string name="prefs_prio1_color">Priority 1 color</string>
	<string name="prefs_prio2_color">Priority 2 color</string>
	<string name="prefs_prio3_color">Priority 3 color</string>
	<string name="prefs_prio4_color">Priority 4 color</string>
	<string name="prefs_prio5_color">Priority 5 color</string>
	<string name="prefs_due_date_color">Due date color</string>
	<string name="prefs_due_today_color">Due today color</string>
	<string name="prefs_overdue_color">Overdue color</string>
	<string name="prefs_progress_color">Progress bar color</string>

	<string name="day0">%1d days</string>
	<string name="day1">%1d day</string>
	<string name="day2">%1d days</string>
	<string name="day3">%1d days</string>
	<string name="day4">%1d days</string>
	<string name="day5">%1d days</string>
</resources>
