<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

	<LinearLayout android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
	              android:orientation="vertical">
		<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dip"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="@string/select_tag_title"/>
		<Spinner
				android:id="@+id/conf_tags"
				android:layout_marginLeft="20dip"
				android:layout_marginRight="20dip"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"/>
		<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dip"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="@string/widget_filtering_options"/>
		<CheckBox
				android:id="@+id/conf_hide_completed"
				android:layout_marginLeft="20dip"
				android:layout_marginRight="20dip"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:text="@string/widget_hide_completed"/>
		<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dip"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="@string/widget_show_only"/>
		<CheckBox
				android:id="@+id/conf_show_only_due"
				android:layout_marginLeft="20dip"
				android:layout_marginRight="20dip"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:text="@string/widget_show_only_due"/>
		<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:orientation="horizontal"
				android:layout_marginLeft="20dip"
				android:layout_marginRight="20dip">
			<CheckBox
					android:id="@+id/conf_show_only_due_x"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/widget_show_only_due_x"/>
			<Spinner
					android:id="@+id/conf_days_spinner"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			<TextView
					android:text="@string/widget_days"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:singleLine="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
		</LinearLayout>
		<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dip"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="@string/sorting"/>
		<Button
				android:id="@+id/conf_sorting"
				android:layout_marginLeft="20dip"
				android:layout_marginRight="20dip"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/prio_due_summary"/>
		<TextView
				android:layout_width="fill_parent"
				android:layout_height="0dip"
				android:layout_weight="1.0"/>
		<LinearLayout android:orientation="horizontal"
		              android:layout_width="fill_parent"
		              android:layout_height="wrap_content"
		              style="@android:style/Widget.Holo.ActionBar.Solid">
			<TextView
					android:layout_width="0dip"
					android:layout_height="fill_parent"
					android:layout_weight="0.6"/>
			<Button
					android:id="@+id/conf_ok"
					style="@style/ToolButtonWithBorder"
					android:layout_width="0dip"
					android:layout_weight="0.3"
					android:layout_height="wrap_content"
					android:text="@string/widget_ok"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>